--- a/kamachi-app/package.json
+++ b/kamachi-app/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "homepage": "https://luxen03.github.io/kamachi-app",
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
@@ -12,6 +13,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "gh-pages": "^6.3.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-intersection-observer": "^9.16.0",
