--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "kamachidev",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Luxen03/KamachiDev.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Luxen03/KamachiDev/issues"
-  },
-  "homepage": "https://github.com/Luxen03/KamachiDev#readme",
-  "description": "",
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  }
+    "name": "kamachidev",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "deploy": "cd kamachi-app && npm run deploy"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://Luxen03.github.io.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://Luxen03.github.io/issues"
+    },
+    "homepage": "https://Luxen03.github.io",
+    "description": "",
+    "dependencies": {
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
+    }
 }
